@@ -76,5 +76,6 @@ extern int min_search_length;
 extern int search_skip_screen_p;
 extern int infopath_no_defaults_p;
 extern int preprocess_nodes_p;
+extern int key_time;
 
 #endif /* not INFO_VARIABLES_H */
